Bug 48154 - [4.7 Regression] 481.wrf in SPEC CPU 2006 failed to build
Summary: [4.7 Regression] 481.wrf in SPEC CPU 2006 failed to build
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-16 18:34 UTC by H.J. Lu
Modified: 2011-03-17 09:37 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2011-03-16 18:34:22 UTC
On Linux/Intel64, revision 171017 gave

module_ra_gfdleta.fppized.f90: In function 'fst88':
module_ra_gfdleta.fppized.f90:3083:0: error: '__builtin_ia32_truncps' needs isa option -msse4.1
module_ra_gfdleta.fppized.f90:3092:0: error: '__builtin_ia32_truncps' needs isa option -msse4.1

Revision 170924 is OK.
Comment 1 H.J. Lu 2011-03-16 18:43:08 UTC
I used -O3 -funroll-loops -ffast-math.
Comment 2 hjl@gcc.gnu.org 2011-03-16 20:04:45 UTC
Author: hjl
Date: Wed Mar 16 20:04:40 2011
New Revision: 171069

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=171069
Log:
Check TARGET_ROUND for BUILT_IN_{FLOOR,CEIL,TRUNC,RINT}{,F} builtins.

2011-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/48154
	* config/i386/i386.c (ix86_builtin_vectorized_function): Check
	TARGET_ROUND for BUILT_IN_{FLOOR,CEIL,TRUNC,RINT}{,F} builtins.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c
Comment 3 Richard Biener 2011-03-17 09:37:45 UTC
Fixed.